# feather

./: .gitignore  CMakeLists.txt  README.md
src/app/: CMakeLists.txt  feather.aps  feather.rc  main.cpp
src/lib/: CMakeLists.txt
src/lib/core/: CMakeLists.txt  deps.hpp  field.hpp  parameter.hpp  pluginmanager.cpp  pluginmanager.hpp  scenegraph.hpp  scenegraph.hpp.old  selection.hpp  status.hpp  tools.cpp  tools.hpp  types.hpp
src/lib/plugin/: CMakeLists.txt  core_access.cpp  core_access.hpp  plugin.cpp  plugin.hpp
src/lib/qml/: CMakeLists.txt  commands.cpp  commands.hpp  curves.cpp  curves.hpp  debug.cpp  field_model.cpp  field_model.hpp  layer_model.cpp  layer_model.hpp  qml.cpp  qml.hpp  qml_status.cpp  qml_status.hpp  sg_editor.cpp  sg_editor.hpp  tree_model.cpp  tree_model.hpp  viewport.cpp  viewport.hpp
src/lib/qml/shaders/: CMakeLists.txt
src/lib/vulkan/: CMakeLists.txt
src/lib/vulture/: CMakeLists.txt  axis.cpp  basenode.cpp  debug.cpp  grid.cpp  mesh.cpp  pipelines.cpp  pointlight.cpp  tools.cpp  vulture_cpp.cpp  vulture_wrap.cxx  window.cpp
src/lib/vulture/shaders/: CMakeLists.txt
src/qml/: CMakeLists.txt  LayerEditor.qml  MainToolBar.qml  Outliner.qml  SceneGraphEditor.qml  ViewportEditor.qml
src/qml/node_models/: CMakeLists.txt
src/test/: main.cpp
src/vulture/: CMakeLists.txt
