SET(CMAKE_INCLUDE_CURRENT_DIR ON)

set(GLUT_INCLUDE_DIR  "e:\\TEMP\\venders\\freeglut\\include")
set(GLUT_glut_LIBRARY_DIR  "e:\\TEMP\\venders\\freeglut\\lib\\x64")


set(DLFCN_WIN32_INCLUDE_DIR  "e:\\TEMP\\venders\\dlfcn-win32\\include")
set(DLFCN_WIN32_LIBRARY_DIR  "e:\\TEMP\\venders\\dlfcn-win32\\lib")
set(DLFCN_WIN32_ROOT_DIR  "e:\\TEMP\\venders\\dlfcn-win32")
set(BOOST_INCLUDE_DIR  "c:\\Boost")
set (SPECIAL_BOOST_LIBRARY_DIR "C:\\Boost\\lib64-msvc-14.2")
set(Boost_DIR "c:\\Boost\\boost")

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DNOMINMAX -DVK_PROTOTYPES -D_USE_MATH_DEFINES")

ADD_DEFINITIONS(-D_CRT_SECURE_NO_WARNINGS)
add_definitions( -DFEATHER_PLATFORM_WINDOWS=1 -DFEATHER_BUILD_DLL=1)

FIND_PACKAGE(Qt5Widgets REQUIRED)
FIND_PACKAGE(Qt5Gui REQUIRED)
FIND_PACKAGE(Qt5Core REQUIRED)
FIND_PACKAGE(Qt5Quick REQUIRED)
FIND_PACKAGE(Qt5OpenGL REQUIRED)
FIND_PACKAGE(OpenGL REQUIRED)
FIND_PACKAGE(Boost REQUIRED)
FIND_PACKAGE(Qt5Qml REQUIRED)
#FIND_PACKAGE(DLFCN_WIN32 REQUIRED)

SET(feather_SRCS
 main.cpp
)

#SET(QT_USE_QTOPENGL TRUE)

INCLUDE_DIRECTORIES(${feather_core_SOURCE_DIR}
    ${feather_qml_SOURCE_DIR}
    ${Qt5Gui_INCLUDE_DIRS}
    ${dlfcn_INCLUDE_DIRS}
    ${GLUT_INCLUDE_DIRS}
    ${Qt5Core_INCLUDE_DIRS}
    ${Qt5Widgets_INCLUDE_DIRS}
    ${Qt5Quick_INCLUDE_DIRS}
    ${Qt5Qml_INCLUDE_DIRS}
    ${BOOST_INCLUDE_DIR}
)

LINK_DIRECTORIES(${feather_core_BINARY_DIR}
    ${feather_qml_BINARY_DIR}
    ${GLUT_glut_LIBRARY_DIR}
    ${DLFCN_WIN32_LIBRARY_DIR}
    ${SPECIAL_BOOST_LIBRARY_DIR}
)

LINK_LIBRARIES(feather_qml feather_core )

ADD_DEFINITIONS( ${Qt5Widgets_DEFINITIONS}
    ${Qt5Quick_DEFINITIONS}
    ${Qt5Core_INCLUDE_DIRS}
    ${Qt5Gui_INCLUDE_DIRS}
    ${Qt5Qml_INCLUDE_DIRS}
)

SET(feather_LIBS
 ${Qt5Widgets_LIBRARIES}
 ${Qt5Quick_LIBRARIES}
 ${QTOPENGL_LIBRARIES}
 ${OPENGL_LIBRARIES}
 ${GLUT_LIBRARIES}
 ${BOOST_LIBRARIES}
 ${Qt5Core_LIBRARIES}
 ${Qt5Gui_LIBRARIES}
 ${Qt5Qml_LIBRARIES}
 "-lQt53DCore"
 "-lQt53DRender"
 "-lQt53DExtras"
 "-lQt53DInput"
 "-lQt53DLogic"
 "-lQt53DQuickExtras"
 "-lQt53DQuickRender"
)

SET(CMAKE_CXX_FLAGS "-Ic:/Boost/boost")

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${Qt5Widgets_EXECUTABLE_COMPILE_FLAGS}")
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${Qt5Quick_EXECUTABLE_COMPILE_FLAGS}")
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${Qt5Core_EXECUTABLE_COMPILE_FLAGS}")
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${Qt5Gui_EXECUTABLE_COMPILE_FLAGS}")
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${Qt5Qml_EXECUTABLE_COMPILE_FLAGS}")

ADD_EXECUTABLE(feather ${feather_SRCS} ${feather_MOC_SRCS})

SET_TARGET_PROPERTIES(feather
    PROPERTIES
    CMAKE_CXX_STANDARD 11
    CMAKE_CXX_STANDARD_REQUIRED ON
)

TARGET_LINK_LIBRARIES(feather ${feather_LIBS} freeglut.lib dl.lib)

QT5_USE_MODULES(feather Widgets Core Gui Qml Quick)

# Config file
FILE(GLOB CONFIG_FILES "feather.rc")
INSTALL(FILES ${CONFIG_FILES} DESTINATION e:/Feather)

# INSTALL
INSTALL( TARGETS feather
    RUNTIME DESTINATION e:/Feather)
